# ptz_control

./: CMakeLists.txt  README.md  kdpreset.cpp  kdpreset.h  kdptz.ui  kdptz_gui.cpp  kdptz_gui.pro  kdptzaux.cpp  kdptzaux.h  kdptzbasic.cpp  kdptzbasic.h  kdptzcruise.cpp  kdptzcruise.h  kdptzctrl.cpp  kdptzctrl.h  kdptzpattern.cpp  kdptzpattern.h  kvlabel.cpp  kvlabel.h  stdafx.cpp  stdafx.h
